--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "rehype-raw": "^7.0.0",
+    "remark-footnotes": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
